# bazan-ai-v2

./: .env.example  .gitignore  GEMINI.md  INIT_PROJECT_PROMPT.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  config.yml  feature.md
data/seeds/: crop_calendar.json  nutrition_db.json  provinces.json  soil_types.json
docs/: architecture.md  deployment.md  rag-pipeline.md  tools.md
infra/: docker-compose.dify.yml  docker-compose.prod.yml  docker-compose.yml
infra/nginx/dify/: proxy_params
infra/scripts/: backup_db.sh  ingest_all.sh
services/doc-pipeline/: .env.example  assessor.py  chunker.py  config.py  extractor.py  index_db.py  pipeline.py  pyproject.toml  uploader.py
services/functions/: price_tool.py  test_weather.py  weather_tool.py
services/pipelines/: requirements.txt
services/pipelines/pipelines/: bazan_rag_pipeline.py
services/pipelines/tools/: farming_plan_tool.py  price_tool.py  soil_tool.py  user_profile_tool.py  weather_tool.py
services/rag-api/: .env.example  Dockerfile  pyproject.toml
services/rag-api/app/: config.py  main.py
services/rag-api/app/api/: deps.py
services/rag-api/app/api/routes/: ingest.py  search.py
services/rag-api/app/core/: chunker.py  embedder.py  retriever.py
services/rag-api/app/ingest/: base_loader.py  md_loader.py  pdf_loader.py  pipeline.py
services/rag-api/app/models/: document.py  schemas.py
tests/: conftest.py
tests/integration/: test_user_profile_tool.py
tests/unit/: test_chunker.py  test_md_loader.py
(+1 files in other folders)
